# DIY-Golf-Ball-Plotter

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CHATGPT_PROJECT_CONTEXT.md  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  cnc_test.py  cnc_web_controller.py  dev.py  golf_ball_plotter_svg_gcode_runner.py  pyproject.toml  requirements.txt  run.py
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  geometry_bug.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  logging_setup.py
app/models/: __init__.py  geometry.py  machine_state.py  svg_models.py
app/routes/: __init__.py  job_routes.py  machine_routes.py  raster_routes.py  svg_routes.py  ui_routes.py
app/services/: __init__.py  _legacy.py  coverage_planner.py  gcode_service.py  geometry_service.py  job_runner.py  machine_service.py  pipeline_core.py  raster_analysis_service.py  (+7 more)
docs/: ci-branch-protection.md  project-history-timeline.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_diagnostic_calibration_routes.py  test_frontend_generation.py  test_gcode_service.py  test_geometry_service.py  test_grbl_streaming.py  test_infill_connector_regressions.py  test_machine_job_safety.py  test_raster_analysis_service.py  test_reference_rectilinear_infill.py  test_runtime_estimation_service.py  test_serial_backend_fallback.py  test_svg_parser.py  test_toolpath_generation.py  test_validation_service.py
tools/: autotune_carolin.py
(+131 files in other folders)
